# lhi

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  book.toml  justfile
.github/workflows/: ci.yml  release.yml
.kiro/settings/: lsp.json
doc/src/: SUMMARY.md  commands.md  developer-guide.md  internals.md  introduction.md  quickstart.md  troubleshooting.md
docs/: developer-guide.md  reviewsmith-report.md
docs/plans/: mnemosyne-features.md
docs/reviews/: developer-guide.md  reviewsmith-report-2026-03-15.md  reviewsmith-report.md
src/: lib.rs  util.rs
src/commands/: activate.rs  cat.rs  compact.rs  diff.rs  info.rs  init.rs  log.rs  mod.rs  restore.rs  search.rs  snapshot.rs  watch.rs
src/core/: event.rs  index.rs  mod.rs  store.rs
src/watcher/: events.rs  helpers.rs  instance.rs  mod.rs  watcher.rs
