[package]
name = "lhi"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
notify = "7"
ignore = "0.4"
clap = { version = "4", features = ["derive"] }
similar = "2"
bat = { version = "0.26", default-features = false, features = ["regex-fancy"] }
zstd = "0.13"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fs2 = "0.4.3"
crossterm = "0.28"
libc = "0.2.183"
[dev-dependencies]
tempfile = "3"
